# ADOFAI-Macro-WIP

./: ADOFAI-Macro.slnx  README.md
ADOFAI-Macro/: ADOFAI-Macro.csproj  MacroSettings.cs  Program.cs  VirtualKeys.cs
ADOFAI-Macro/Fingering/: AdvancedFingeringStrategy.cs  FingerKeyInfo.cs  FingeringDensityProfile.cs  FingeringNoteBuilder.cs  FingeringProfile.cs  FingeringRules.cs  HandKeyCountAllocator.cs  IFingeringStrategy.cs  KeyCountDecider.cs  KeyCountResolver.cs  KeyLimitedSequentialFingeringStrategy.cs  PseudoChordFingeringStrategy.cs  RuleBasedFingeringStrategy.cs  SequentialFingeringStrategy.cs
ADOFAI-Macro/Input/: IInputBackEnd.cs  StartTrigger.cs  WindowsInputBackend.cs
ADOFAI-Macro/Interop/: NativeAcceleration.cs
ADOFAI-Macro/Models/: AutoPlayTilesEvent.cs  ChartNote.cs  FingerKey.cs  FingeringNote.cs  Hand.cs  HoldEvent.cs  InputEventType.cs  KeyCountRange.cs  KeyGroup.cs  MultiPlanetEvent.cs  ParsedChart.cs  PauseEvent.cs  PicoInputEvent.cs  RawChart.cs  RelativeTileInfo.cs  ScheduledInputEvent.cs  ScheduledNote.cs  SpeedEvent.cs  SpeedEventType.cs
ADOFAI-Macro/Native/: CMakeLists.txt  adofai_native.cpp
ADOFAI-Macro/Parsing/: AdofaiAngleConverter.cs  AdofaiBpmCalculator.cs  ChartLoader.cs  ChartParser.cs
ADOFAI-Macro/Pico/: PicoInputEventConverter.cs  PicoSerialClient.cs
ADOFAI-Macro/Scheduling/: DelayTableGenerator.cs  (+6 more)
AdofaiPauseConverter/: Program.cs
InputDevice/: InputDevice.csproj  Program.cs
JSONDuplicatorDelete/: LenientJsonParser.cs  Program.cs
VKCodeViewer.cs/: Program.cs
native/: CMakeLists.txt  adofai_native.cpp
